feat(master)css conflit

--- a/assets/fondations/_variables.scss
+++ b/assets/fondations/_variables.scss
@@ -1,5 +1,6 @@
 @import "./functions";
 @import "./mixins";
+@import "./normalize";
 
 // @font-face {
 //   font-family: "ROASHE";
@@ -41,4 +42,3 @@ $text2tel: 0.875rem;
 $text3tel: 0.625rem;
 $menutel: 2.313rem;
 $formulairetel: 0.875rem;
-
